# gesture_estimation

./: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
config/: z_scale_factor.txt
nodes/: hand_gesture.py  pose_gesture.old.py  pose_gesture.py
src/gesture_estimation/: __init__.py  gesture_estimation.py
src/hand_tracking/: __init__.py  debug.py  gesture_estimation.py  plot_utils.py  pose_estimation.py  tracking.py
