<?xml version="1.0"?>
<package format="2">

	<name>hand_tracking</name>
	<version>1.0.0</version>
	<description>Hand tracking using mediapipe</description>

	<author email="peter@qrholm.eu">Peter Ørholm Nielsen</author>
	<maintainer email="peter@qrholm.eu">Peter Ørholm Nielsen</maintainer>

	<license>BSD</license>

	<url type="repository">https://github.com/teleop-grasp/hand_tracking</url>

	<!-- build tool -->
	<buildtool_depend>catkin</buildtool_depend>

	<!-- ROS packages -->
	<depend>rospy</depend>
	<depend>sensor_msgs</depend>
	<depend>cv_bridge</depend>
	<depend>python3-opencv</depend>
	<depend>python3-mediapipe-pip</depend>

</package>
